Subindo css do portfolio

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
 #formacao a {
     text-decoration: none;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 400px;
     font-size: 14px;
     line-height: 19px;
     text-decoration-line: underline;
