--- a/style.css
+++ b/style.css
@@ -5,14 +5,15 @@
 
 body {
     background: #E5E5E5;
-    margin: 0 220px;
     font-family: sans-serif;
+    width: 1000px;
+    margin: 0 auto;
 }
 
 #header nav {
     width: 1000px;
     height: 103px;
-    position: fixed;
+    position:fixed;
     background: #BE89CB;
 }
 
