--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body {
     background: #E5E5E5;
-    font-family: sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     width: 1000px;
     margin: 0 auto;
 }
@@ -14,7 +14,7 @@ body {
     width: 1000px;
     height: 103px;
     position:fixed;
-    background: #BE89CB;
+    background: #ff9999;
 }
 
 #header ul {
@@ -37,9 +37,8 @@ body {
 
 #apresentacao {
     width: 1000px;
-    height: 579px;
-    padding-top: 48px;
-    background: #EDEAEA;
+    height: 650px;
+    background: #660033;
 }
 
 #apresentacao h1 {
@@ -48,7 +47,7 @@ body {
     line-height: 50px;
     letter-spacing: 0em;
     text-align: center;
-    color: #FF4DBC;
+    color: #999;
 }
 
 #apresentacao h2 {
@@ -57,30 +56,39 @@ body {
     line-height: 34px;
     letter-spacing: 0em;
     text-align: center;
-    color: #9173ac;
+    color: #ff9999;
 }
 
 #apresentacao-texto {
-    text-align: center;
+    text-align: justify;
     font-size: 16px;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0em;
-    margin: 0 183px 0 225px;
-    padding: 20px 84px 20px 20px;
+    margin: 0 200px;
+    padding: 20px 10px;
+    color: #fff;
 }
 
 #foto {
     width: 180px;
     height: 180px;
     border-radius: 200px;
-    margin: 100px 421px 26px 431px;
+    margin: 153px 410px 20px;
+}
+
+#imagem {
+    width: 80px;
+    height: 80px;
+    border-radius: 200px;
+    margin: 30px 450px;
 }
 
 #formacao {
     width: 1000px;
-    height: 400px;
+    height: 430px;
     padding-top: 10px;
+    background-color: #d3d3d3;
 }
 
 #formacao ul {
@@ -93,7 +101,7 @@ body {
     font-size: 24px;
     line-height: 33px;
     margin: 20px 0 50px 40px;
-    color: #FF4DBC;
+    color: #660033;
 }
 
 #formacao h3 {
@@ -103,7 +111,7 @@ body {
     font-size: 16px;
     line-height: 22px;
     margin-left: 237px;
-    color: #9173ac;
+    color: #660033;
 }
 
 #formacao a {
@@ -113,7 +121,7 @@ body {
     font-size: 14px;
     line-height: 19px;
     text-decoration-line: underline;
-    color: #2F80ED;
+    color: #000;
     margin: 0 464px 0 237px;
 
 }
@@ -129,9 +137,9 @@ body {
 
 #projetos {
     width: 1000px;
-    height: 400px;
+    height: 450px;
     padding-top: 10px;
-    background: #EDEAEA;
+    background: #d3d3d3;
 }
 
 #projetos ul {
@@ -144,18 +152,17 @@ body {
     font-size: 24px;
     line-height: 33px;
     margin: 20px 0 50px 40px;
-    color: #FF4DBC;
+    color:#660033;
 }
 
 #projetos h3 {
     list-style: none;
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 22px;
     margin-left: 237px;
-    color: #9173ac;
+    color: #660033;
 }
 
 #projetos a {
@@ -166,13 +173,12 @@ body {
     font-size: 14px;
     line-height: 19px;
     text-decoration-line: underline;
-    color: #2F80ED;
+    color: #000;
     margin: 0 464px 0 237px;
 
 }
 
 #projetos p {
-    font-family: sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -185,7 +191,8 @@ body {
     position: absolute;
     width: 1000px;
     height: 198px;
-    background: #BE89CB;
+    background:#ff9999;
+    ;
 }
 
 #contatos ul {
